--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^18.0.0",
         "@fortawesome/fontawesome-free": "^5.13.0",
+        "v-mask": "^2.1.0",
         "vue-plain-pagination": "^0.3.0"
     }
 }
